added a pro footer

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,9 +1,16 @@
-<div class="footer">
-  <div class="footer-upper-content">
-    <div>Copyright © November 20, 2023 Yuva Pomskies Kennel - All Rights Reserved.</div>
-    <div>Powered by Yuva Pomskies</div>
-  </div>
-  <div class="footer-lower-content">
-      PUPPY APPLICATIONPRIVACY POLICYTERMS AND CONDITIONS
-  </div>
-</div>
+<footer>
+    <div class="footer-content">
+        <div class="footer-logo">Dog Market</div>
+        <div class="footer-links">
+            <a href="#">Home</a>
+            <a href="#">Dogs for Sale</a>
+            <a href="#">Contact Us</a>
+        </div>
+        <div class="footer-social">
+            <a href="#" target="_blank">Facebook</a>
+            <a href="#" target="_blank">Twitter</a>
+            <a href="#" target="_blank">Instagram</a>
+        </div>
+    </div>
+    <p>&copy; 2023 Dog Market</p>
+</footer>
