--- a/public/css/style.css
+++ b/public/css/style.css
@@ -278,30 +278,6 @@ img{
   border-radius: 15px;
 }
 
-.footer{
-  background-color: var(--main-color);
-  width: 100%;
-  padding: 15px;
-  color: whitesmoke;
-  font-size: 13px;
-}
-
-.footer-upper-content{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 100px;
-}
-
-.footer-lower-content{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-style: italic;
-  margin: 20px;
-}
-
-
 /* about-us */
 .two-column-section {
   background-color: #010103;
@@ -376,6 +352,47 @@ img{
 
 .dog-card button:hover {
   background-color: #0056b3;
+}
+
+
+
+/* footer  */
+footer {
+  background-color: var(--main-color);
+  color: #ffffff;
+  text-align: center;
+  padding: 20px 0;
+}
+
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer-logo {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.footer-links,
+.footer-social {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+
+.footer-links a,
+.footer-social a {
+  color: #ffffff;
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+
+.footer-links a:hover,
+.footer-social a:hover {
+    color: #007bff;
 }
 
 
