updated style for  availability section

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -304,6 +304,7 @@ img{
 
 /* Available dogs  */
 .availability-section {
+  background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
