--- a/views/partials/availableDogs.handlebars
+++ b/views/partials/availableDogs.handlebars
@@ -1,6 +1,6 @@
 <div class="availability-section">
     <div class="dog-card">
-        <img src="dog1.jpg" alt="Golden Retriever">
+        <img src="/images/Kemmy.jpg" alt="Golden Retriever">
         <h2>Golden Retriever</h2>
         <p>Friendly and playful. Loves kids and other pets.</p>
         <p>Price: $1000</p>
@@ -8,7 +8,7 @@
     </div>
 
     <div class="dog-card">
-        <img src="dog2.jpg" alt="German Shepherd">
+        <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="German Shepherd">
         <h2>German Shepherd</h2>
         <p>Intelligent and loyal. Great guard dog.</p>
         <p>Price: $1200</p>
