--- a/public/css/style.css
+++ b/public/css/style.css
@@ -357,6 +357,27 @@ img{
 
 
 
+/* carou */
+.carousel-container {
+  width: 100%;
+  overflow: hidden;
+}
+
+.carousel-wrapper {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel-item {
+  min-width: 100%;
+  box-sizing: border-box;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
 /* footer  */
 footer {
   background-color: var(--main-color);
