--- a/views/partials/availableDogs.handlebars
+++ b/views/partials/availableDogs.handlebars
@@ -15,6 +15,27 @@
         <button>Contact Seller</button>
     </div>
 
+
+ 
+
     <!-- Add more dog cards as needed -->
 
 </div>
+
+   <div class="carousel-container">
+        <div class="carousel-wrapper">
+            <div class="carousel-item">
+              dfg
+                <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="Image 1">
+            </div>
+            <div class="carousel-item">
+                <img src="/images/Kemmy.jpg" alt="Image 2">
+            </div>
+            <div class="carousel-item">
+                <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="Image 3">
+            </div>
+            <!-- Add more carousel items as needed -->
+        </div>
+    </div>
+
+<script src="/JavaScript/sl.js"></script>
