--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -168,31 +168,31 @@
   </div>
   <div class="all-what-exists row">
     <div class="alldogs col-sm-3 col-md-4 col-lg-6">
+      <span class="parent_heading">Tokyo</span>
       <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="" class="races_img">
-      <h1>Tokyo</h1>
-      <p>née le 20-2-2020</p>
     </div>
     <div class="alldogs col-sm-3 col-md-4 col-lg-6">
+      <h1>DNA Test Result</h1>
       <img src="/images/Genetique Tokyo2.jpg" alt="" class=" races_img">
-      <h1>Tokyo Genetique</h1>
     </div>
     <div class="alldogs col-sm-3 col-md-4 col-lg-6">
+      <span class="parent_heading">Kemy</span>
       <img src="/images/kemmy.jpg" alt="" class="races_img">                
-      <h1>Pike</h1>
-      <p>née le 20-1-2022</p>
     </div>
     <div class="alldogs col-sm-3 col-md-4 col-lg-6">
-      <img src="/images/Genetique Tokyo2.jpg" alt="" class="races_img">          
-      <h1>Hello</h1>
-      <p>née le 20-2-2020</p>
+      <h1>DNA Test Result</h1>
+      <img src="/images/KemmyG.jpg" alt="" class="races_img">          
     </div>
   </div>
 </div>
 
-
-
+{{!-- available dogs partial --}}
 {{> availableDogs}}
 
+{{!-- clients partial --}}
+{{> clients}}
+
+{{!-- footer partial  --}}
 {{> footer}}
 
 <script src="../controllers/homepage.js"></script>
