--- a/views/partials/availableDogs.handlebars
+++ b/views/partials/availableDogs.handlebars
@@ -6,7 +6,6 @@
         <p>Price: $1000</p>
         <button>Contact Seller</button>
     </div>
-
     <div class="dog-card">
         <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="German Shepherd">
         <h2>German Shepherd</h2>
@@ -14,28 +13,20 @@
         <p>Price: $1200</p>
         <button>Contact Seller</button>
     </div>
-
-
- 
-
-    <!-- Add more dog cards as needed -->
-
-</div>
-
-   <div class="carousel-container">
-        <div class="carousel-wrapper">
-            <div class="carousel-item">
-              dfg
-                <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="Image 1">
-            </div>
-            <div class="carousel-item">
-                <img src="/images/Kemmy.jpg" alt="Image 2">
-            </div>
-            <div class="carousel-item">
-                <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="Image 3">
-            </div>
-            <!-- Add more carousel items as needed -->
-        </div>
+    <div class="dog-card">
+        <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="German Shepherd">
+        <h2>German Shepherd</h2>
+        <p>Intelligent and loyal. Great guard dog.</p>
+        <p>Price: $1200</p>
+        <button>Contact Seller</button>
     </div>
+    <div class="dog-card">
+        <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="German Shepherd">
+        <h2>German Shepherd</h2>
+        <p>Intelligent and loyal. Great guard dog.</p>
+        <p>Price: $1200</p>
+        <button>Contact Seller</button>
+    </div>
+</div>
 
 <script src="/JavaScript/sl.js"></script>
