--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -187,7 +187,11 @@
 {{!-- clients partial --}}
 {{> clients}}
 
+{{!-- contact partial  --}}
+{{> contact}}
+
 {{!-- footer partial  --}}
 {{> footer}}
 
 <script src="../controllers/homepage.js"></script>
+<script src="/JavaScript/showForm.js"></script>
