upadted some style on the availability section and added more sold dogs images

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -31,7 +31,7 @@
     </ul>
   </div>
   
-  <button class="fa-beat-fade contact_me_text" id="nav-link">Contact Moi<i class="fa-solid fa-right-to-bracket m-1"></i></button>
+  <button class="fa-beat-fade contact_me_text contact" id="nav-link">Contact Moi<i class="fa-solid fa-right-to-bracket m-1"></i></button>
 
 </nav>
 
@@ -106,7 +106,7 @@
 
     <div class="box">
       <img src="/images/pomsky6.jpg" alt="">
-      <h3 class="heading-2">Kimy et Pike</h3>
+      <h3 class="heading-2">Pike</h3>
       <div class="price"><div class="price-2 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
        <div class="sold-container">
         <h1 class="sold-heading">Vende(u)</h1>
@@ -125,8 +125,8 @@
     </div>
 
     <div class="box">
-      <img src="/images/pomsky6.jpg" alt="">
-      <h3 class="heading-4" >Jamaica Blue coffee from Jamaica</h3>
+      <img src="/images/lolo/371969826_3397572470555140_8514733510356974286_n.jpg" alt="">
+      <h3 class="heading-4" >Kara</h3>
       <div class="price"><div class="price-4 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
       <div class="sold-container">
         <h1 class="sold-heading">Vende(u)</h1>
@@ -135,8 +135,8 @@
     </div>
 
     <div class="box">
-      <img src="/images/pomsky6.jpg" alt="">
-      <h3 class="heading-5" >Nakayama Arabica coffee from Okinawa</h3>
+      <img src="/images/lolo/379342045_210286095217878_7196217229576845006_n.jpg" alt="">
+      <h3 class="heading-5" >Louou</h3>
       <div class="price"><div class="price-5 prices">$2500</div><div class="dollar-sign"></div><span>$3000</span></div>
       <div class="sold-container">
         <h1 class="sold-heading">Vende(u)</h1>
@@ -145,8 +145,8 @@
     </div>
 
     <div class="box">
-      <img src="/images/pomsky6.jpg" alt="">
-      <h3 class="heading-6" >Peaberry Arabica coffee from Brazil</h3>
+      <img src="/images/lolo/379998324_709707197671569_5102654164937962614_n.jpg" alt="">
+      <h3 class="heading-6" >Doura</h3>
       <div class="price"><div class="price-6 prices">155.99</div><div class="dollar-sign"></div><span>115.99$</span></div>
       <div class="sold-container">
         <h1 class="sold-heading">Vende(u)</h1>
