--- a/views/partials/availableDogs.handlebars
+++ b/views/partials/availableDogs.handlebars
@@ -4,29 +4,27 @@
         <h2>Golden Retriever</h2>
         <p>Friendly and playful. Loves kids and other pets.</p>
         <p>Price: $2500</p>
-        <button>Contact Seller</button>
+        <button class="contact-me">Contact Seller</button>
     </div>
     <div class="dog-card">
         <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="German Shepherd">
         <h2>German Shepherd</h2>
         <p>Intelligent and loyal. Great guard dog.</p>
         <p>Price: $2500</p>
-        <button>Contact Seller</button>
+        <button class="contact-me">Contact Seller</button>
     </div>
     <div class="dog-card">
         <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="German Shepherd">
         <h2>German Shepherd</h2>
         <p>Intelligent and loyal. Great guard dog.</p>
         <p>Price: $2500</p>
-        <button>Contact Seller</button>
+        <button class="contact-me">Contact Seller</button>
     </div>
     <div class="dog-card">
         <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="German Shepherd">
         <h2>German Shepherd</h2>
         <p>Intelligent and loyal. Great guard dog.</p>
         <p>Price: $2500</p>
-        <button>Contact Seller</button>
+        <button class="contact-me">Contact Seller</button>
     </div>
 </div>
-
-<script src="/JavaScript/sl.js"></script>
