--- a/views/partials/clients.handlebars
+++ b/views/partials/clients.handlebars
@@ -1,8 +1,8 @@
 <div class="clients">
- <section class="testimonial-card">
+  <section class="testimonial-card">
     <div class="testimonial-content">
       <img src="client1.jpg" alt="Client 1">
-      <h2>Client Name 1</h2>
+      <h2>Junnifer</h2>
       <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
     </div>
   </section>
@@ -10,7 +10,31 @@
   <section class="testimonial-card">
     <div class="testimonial-content">
       <img src="client2.jpg" alt="Client 2">
-      <h2>Client Name 2</h2>
+      <h2>Amy</h2>
+      <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+    </div>
+  </section>
+  
+  <section class="testimonial-card">
+    <div class="testimonial-content">
+      <img src="client2.jpg" alt="Client 2">
+      <h2>Jackson</h2>
+      <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+    </div>
+  </section>
+
+  <section class="testimonial-card">
+    <div class="testimonial-content">
+      <img src="client2.jpg" alt="Client 2">
+      <h2>John</h2>
+      <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+    </div>
+  </section>
+
+  <section class="testimonial-card">
+    <div class="testimonial-content">
+      <img src="client2.jpg" alt="Client 2">
+      <h2>Lucas</h2>
       <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
     </div>
   </section>
