--- a/public/css/style.css
+++ b/public/css/style.css
@@ -391,6 +391,7 @@ img {
 
 /* clients */
 .clients{
+  background-color: #b0a9a931;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -399,15 +400,10 @@ img {
 }
 
 
-body, h1, p {
-  margin: 0;
-  padding: 0;
-}
-
 .testimonial-card {
   background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(24, 23, 23, 0.1);
   margin: 20px;
   overflow: hidden;
   max-width: 400px;
