--- a/views/partials/aboutUs.handlebars
+++ b/views/partials/aboutUs.handlebars
@@ -6,7 +6,7 @@
       <img src="/images/pomsky1.jpg" alt="Image">
   </div>
   <div class="column">
-    <h2>Content Heading</h2>
+    <h2>A Propos</h2>
     <p>Bonjour, je m'appelle Yuva et mon histoire avec les pomskies a commencé en 2020 après avoir eu mon premier adorable chien pomsky (TOKYO), 
       j'ai tomber amoureux d'elle au premier regard.
       Après avoir lu beaucoup de choses sur ces chiens, j'ai décidé de travailler dur pour aider la cette generation de desparition.
