--- a/views/partials/contact.handlebars
+++ b/views/partials/contact.handlebars
@@ -1,10 +1,10 @@
 <section class="contact-form">
-  <h2>Contact Me</h2>
+  <h2>Contact Moi</h2>
   <form action="submit_form.php" method="post">
-    <label for="name">Name:</label>
+    <label for="name">Nom:</label>
     <input type="text" id="name" name="name" required>
 
-    <label for="phone">Phone Number:</label>
+    <label for="phone">Numero Du Telephone:</label>
     <input type="tel" id="phone" name="phone" required>
 
     <label for="email">Email:</label>
