cstmr reviewr add on

--- a/views/partials/clients.handlebars
+++ b/views/partials/clients.handlebars
@@ -27,7 +27,7 @@
     <div class="testimonial-content">
       <img src="client2.jpg" alt="Client 2">
       <h2>John</h2>
-      <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+      <p>"Our picky eater, Bella, absolutely loves this dog! Her coat is shinier, and she has so much more energy."</p>
     </div>
   </section>
 
