--- a/views/partials/availableDogs.handlebars
+++ b/views/partials/availableDogs.handlebars
@@ -1,4 +1,4 @@
-<div class="availability-section">
+<div class="availability-section" id="available_dogs">
     <div class="dog-card">
         <img src="/images/Kemmy.jpg" alt="Golden Retriever">
         <h2>Golden Retriever</h2>
