--- a/views/partials/clients.handlebars
+++ b/views/partials/clients.handlebars
@@ -1,41 +1,60 @@
+<div class="review_section">
+  <div class="stars">
+    <h1>Reviews</h1>
+    <i class="fas fa-star" data-id="1"></i>
+    <i class="fas fa-star" data-id="2"></i>
+    <i class="fas fa-star" data-id="3"></i>
+    <i class="fas fa-star" data-id="4"></i>
+    <i class="fas fa-star-half-alt" data-id="5"></i>
+  </div>
+
+  <div class="add_review">
+    <i class="fas fa-pen"></i>
+    <button class="add_review_btn">Write a review</button>
+  </div>
+</div>
+
+
+
 <div class="clients">
-  <section class="testimonial-card">
+  <div class="testimonial-card">
     <div class="testimonial-content">
-      <img src="client1.jpg" alt="Client 1">
+      <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="Client 1">
       <h2>Junnifer</h2>
       <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
     </div>
-  </section>
+  </div>
 
-  <section class="testimonial-card">
+  <div class="testimonial-card">
     <div class="testimonial-content">
-      <img src="client2.jpg" alt="Client 2">
-      <h2>Amy</h2>
-      <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
-    </div>
-  </section>
-  
-  <section class="testimonial-card">
-    <div class="testimonial-content">
-      <img src="client2.jpg" alt="Client 2">
+      <img src="/images/dog.png" alt="Client 2">
       <h2>Jackson</h2>
       <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
     </div>
-  </section>
+  </div>
 
-  <section class="testimonial-card">
+  
+  <div class="testimonial-card">
     <div class="testimonial-content">
-      <img src="client2.jpg" alt="Client 2">
+      <img src="/images/dog.png" alt="Client 2">
+      <h2>Jackson</h2>
+      <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+    </div>
+  </div>
+
+  <div class="testimonial-card">
+    <div class="testimonial-content">
+      <img src="/images/dog4.jpg" alt="Client 2">
       <h2>John</h2>
       <p>"Our picky eater, Bella, absolutely loves this dog! Her coat is shinier, and she has so much more energy."</p>
     </div>
-  </section>
+  </div>
 
-  <section class="testimonial-card">
+  <div class="testimonial-card">
     <div class="testimonial-content">
-      <img src="client2.jpg" alt="Client 2">
+      <img src="/images/dpg2.jpg" alt="Client 2">
       <h2>Lucas</h2>
       <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
     </div>
-  </section>
+  </div>
 </div> 
