--- a/views/partials/clients.handlebars
+++ b/views/partials/clients.handlebars
@@ -5,7 +5,8 @@
     <i class="fas fa-star" data-id="2"></i>
     <i class="fas fa-star" data-id="3"></i>
     <i class="fas fa-star" data-id="4"></i>
-    <i class="fas fa-star-half-alt" data-id="5"></i>
+    <i class="fas fa-star" data-id="5"></i>
+    <p>16 reviews</p>
   </div>
 
   <div class="add_review">
