--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -147,7 +147,7 @@
     <div class="box">
       <img src="/images/lolo/379998324_709707197671569_5102654164937962614_n.jpg" alt="">
       <h3 class="heading-6" >Doura</h3>
-      <div class="price"><div class="price-6 prices">155.99</div><div class="dollar-sign"></div><span>115.99$</span></div>
+      <div class="price"><div class="price-6 prices">2500</div><div class="dollar-sign"></div><span>$3000</span></div>
       <div class="sold-container">
         <h1 class="sold-heading">Vende(u)</h1>
         <p class="sold-message">Nous sommes désolés, mais cet article n'est plus disponible.</p>
@@ -172,11 +172,11 @@
     </div>
     <div class="alldogs col-sm-3 col-md-4 col-lg-6">
       <span class="parent_heading">Kemy</span>
-      <img src="/images/kemmy.jpg" alt="" class="races_img">                
+      <img src="/images/kemmy.jpg" alt="Kemy Image" class="races_img">                
     </div>
     <div class="alldogs col-sm-3 col-md-4 col-lg-6">
       <h1>DNA Test Result</h1>
-      <img src="/images/KemmyG.jpg" alt="" class="races_img">          
+      <img src="/images/KemmyG.jpg" alt="Kemy DNA test image" class="races_img">          
     </div>
     <div class="alldogs col-sm-3 col-md-4 col-lg-6">
       <span class="parent_heading">Mal</span>
