added a post method and to add reviews into database, using mysql post method; ;

--- a/views/partials/clients.handlebars
+++ b/views/partials/clients.handlebars
@@ -1,17 +1,17 @@
 <div class="review_section">
   <div class="stars">
-    <h1>Reviews</h1>
+    <h1>Commentaires</h1>
     <i class="fas fa-star" data-id="1"></i>
     <i class="fas fa-star" data-id="2"></i>
     <i class="fas fa-star" data-id="3"></i>
     <i class="fas fa-star" data-id="4"></i>
     <i class="fas fa-star" data-id="5"></i>
-    <p>16 reviews</p>
+    <p>16 Commentaires</p>
   </div>
 
   <div class="add_review">
     <i class="fas fa-pen"></i>
-    <button class="add_review_btn">Write a review</button>
+    <button class="add_review_btn">Laisser un commentaire</button>
   </div>
 </div>
 
