--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -26,7 +26,7 @@
         <a class="nav-link border border-secondary rounded text-light" href="#">Tous Les Chiots Disponibles</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link border border-secondary text-light" href="/help">My Clients</a>
+        <a class="nav-link border border-secondary text-light" href="#client">My Clients</a>
       </li>
     </ul>
   </div>
@@ -195,7 +195,7 @@
 
 
 {{!-- clients partial --}}
-<div class="client_container">
+<div class="client_container" id="client">
   {{> clients}}
 </div>
 
