added moment.js to update the date formating

--- a/views/clients.handlebars
+++ b/views/clients.handlebars
@@ -64,8 +64,8 @@
       <div class="testimonial-card">
         <div class="testimonial-content">
           <img src="/images/dpg2.jpg" alt="Client 2">
-          <h2></h2>
-          <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+          <h2>{{createdAt}}</h2>
+          <p>{{name}}</p>
         </div>
       </div>
     {{/each}}
