--- a/views/clients.handlebars
+++ b/views/clients.handlebars
@@ -18,7 +18,7 @@
     </div>
   </div>
   <div class="review-alert">
-    <h1>Please be respectfull once you add a review</h1>
+    <div class="review_text"><i class="fa-regular fa-bell"></i> Please be respectfull once you add a review</div>
     <button class="ok bg-success">Continuer</button>
   </div>
   <div class="review-submit">
@@ -36,7 +36,9 @@
           <i class="fas fa-star" data-id="4"></i>
           <i class="fas fa-star" data-id="5"></i>
         </div>
-        <button type="submit">Submit</button>
+        <div class="review_btn_submit_wrapper">
+          <button type="submit" class="review_btn_submit">Submit</button>
+        </div>
       </form>
     </section>
   </div>
