--- a/views/clients.handlebars
+++ b/views/clients.handlebars
@@ -25,9 +25,9 @@
     <section class="review-form">
       <form class="form-review">
         <label for="name">Nom:</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="name" class="reviewer_name" required>
         <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="4" required></textarea>
+        <textarea id="message" name="message" rows="4" class="reviewer_message" required></textarea>
         <div class="stars">
           <h5>5 etoil est la bonne lol</h5>
           <i class="fas fa-star" data-id="1"></i>
@@ -98,3 +98,4 @@
 
 </div>
 <script src="/JavaScript/showAlert.js"></script>
+<script src="/JavaScript/addReview.js"></script>
