--- a/views/clients.handlebars
+++ b/views/clients.handlebars
@@ -91,6 +91,7 @@
           <img src="/images/dpg2.jpg" alt="Client 2">
           <h2>{{createdAt}}</h2>
           <p>{{name}}</p>
+          <div>{{stars_num}}</div>
         </div>
       </div>
     {{/each}}
